:recycle: Update dtos, controller and service for Player